✨ feat: criação e estilização do componente header

--- a/src/config-scss/variables.scss
+++ b/src/config-scss/variables.scss
@@ -2,6 +2,8 @@
   --white:#FFF;
   --gray: #efefef;
 
+  --background-header: #05b59d;
+
   --primary-color: #294a88;
-  --secondary-color:#FF5473;
+  --secondary-color: #eb9a28;
 }
