✨ feat: criação de componentes card e aside

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <header>
   <app-header></app-header>
 </header>
+<main class="container-main">
+  <app-card-post class="container-card-post"></app-card-post>
+  <app-sidebar></app-sidebar>
+</main>
 <router-outlet></router-outlet>
