--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 </header>
 <main class="container-main">
-  <app-card-post class="container-card-post"></app-card-post>
+  <router-outlet></router-outlet>
+  <!-- <app-card-post class="container-card-post"></app-card-post> -->
   <app-sidebar></app-sidebar>
 </main>
-<router-outlet></router-outlet>
