✨ feat: add estilo e informações de post component details-post

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,4 +5,11 @@
 }
 .container-main {
   display: flex;
+  //flex-wrap: wrap;
+
+  app-details-post {
+    width: 80%;
+    text-align: center;
+  }
 }
+
