--- a/src/app/components/details-post/details-post.component.html
+++ b/src/app/components/details-post/details-post.component.html
@@ -1,1 +1,12 @@
-<p>details-post works!</p>
+<article>
+  <h2>{{post.title}}</h2>
+  <div class="image-container">
+    <img src="https://marlin.com.br/images/portfolio/1/produto-marlin.jpg"
+      alt="Logo da empresa Marlin com a palavra 'Produto' escrito acima"
+    >
+  </div>
+  <p>{{post.body}}</p>
+  <button>
+    <a  routerLink="/noticias" >voltar</a>
+  </button>
+</article>
