✨ feat: criação de componente e rota add-post

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,6 @@
   <p>Desafio <span>Marlin</span></p>
   <ul>
     <li><a href="/">Notícias</a></li>
-    <li><a href="/">Criar nova notícia</a></li>
+    <li><a routerLink="/criar-post" >Criar nova notícia</a></li>
   </ul>
 </nav>
