✨ feat:  estilização componente add-post

--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -1,1 +1,17 @@
-<p>add-post works!</p>
+<form>
+  <fieldset>
+    <legend>Cadastre sua notícia</legend>
+    <div class="form-content">
+      <label for="title">
+        Título
+        <input type="text" name="title" id="title" required />
+      </label>
+      <label for="message">
+        Notícia
+        <textarea name="message" id="message"  rows="10" required></textarea>
+      </label>
+      <button>Enviar</button>
+    </div>
+  </fieldset>
+</form>
+
