--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,12 @@ main {
   max-width: rem-calc(900);
   margin: 0 auto;
   box-sizing: border-box;
-  // background: lightblue;
-  // padding: 0.1rem;
 }
 
 app-details-post {
+  width: 75%;
+}
+
+app-add-post {
   width: 75%;
 }
