✨ feat: add modal de confirmação de publicação de post

--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -13,4 +13,11 @@
       <button [disabled]="frm.invalid">Enviar</button>
     </div>
   </fieldset>
+
+  <dialog class="modal">
+    <h2>{{postCreated.title}}</h2>
+    <p>{{postCreated.body}}</p>
+    <button routerLink="/noticias">Fechar</button>
+  </dialog>
 </form>
+
