--- a/src/app/components/add-post/add-post.component.scss
+++ b/src/app/components/add-post/add-post.component.scss
@@ -75,6 +75,50 @@ form {
       }
     }
 
+  }
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
+    height: 40%;
+    width: 50%;
+    border: none;
+    border-radius: .5rem;
+    padding: 1rem;
+
+    h2 {
+      font-size: 1.3rem;
+      text-align: center;
+      font-weight: 600;
+    }
+
+    p{
+      margin: 1.8rem 0;
+      text-align: justify;
+
+      &::first-letter {
+        text-transform: capitalize;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #05b59d;
+      }
+    }
+
+    button {
+      position: absolute;
+      bottom: 25px;
+      padding: 0.5rem;
+      color: white;
+      background: #1d90f5;
+      border-radius: 0.2rem;
+      cursor: pointer;
+
+      &:hover {
+        outline: none;
+        background: var(--primary-color);
+      }
+    }
   }
 }
