♻ refactor: substituindo requisições fetch por service

--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -16,7 +16,7 @@
 
   <dialog class="modal">
     <h2>{{postCreated.title}}</h2>
-    <p>{{postCreated.body}}</p>
+    <p>{{postCreated.message}}</p>
     <button routerLink="/noticias">Fechar</button>
   </dialog>
 </form>
