--- a/src/app/components/card-post/card-post.component.html
+++ b/src/app/components/card-post/card-post.component.html
@@ -8,8 +8,7 @@
     <div class="content">
       <h3>{{post.title}}</h3>
       <p>{{post.body}}</p>
-      <a routerLink="/detail/{{ post.id }}" (click)="goToPostDetails(post, post.id)">Leia mais</a>
-      <!-- routerLink="/detail/{{ post.id }}" -->
+      <a routerLink="/detail/{{ post.id }}" >Leia mais</a>
     </div>
   </div>
 </div>
