--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,38 +1,120 @@
 @import '../../../config-scss/rem-calc.scss';
 
-nav {
-  display: flex;
-  justify-content: space-around;
-  height: rem-calc(48);
-  align-items: center;
+a {
 
-  background: var(--background-header);
-
-  p {
-    color: var(--secondary-color);
-
-    span{
-      color: var(--white);
-      font-weight: 700;
-      letter-spacing: rem-calc(2);
-    }
+  transition: color 0.3s ease;
+  color: var(--white);
+  font-weight: 600;
+  letter-spacing: 1px;
+  &:hover {
+    color: var(--greenapple);
   }
-
-  ul {
-    display: flex;
-    gap: 1.5rem;
-
-    a {
-      color: var(--primary-color);
-      font-weight: 700;
-    }
-
-    a:hover {
-      color: var(--secondary-color);
-    }
-  }
-
-
 }
 
+nav {
+  display: grid;
+  grid-template-rows: minmax(min-content, 60px);
+  .brand {
+    cursor: pointer;
+    justify-self: left;
+    margin-left: 15px;
+    font-size: 1.3rem;
+    color: var(--white);
 
+    span {
+      color: var(--primary-color);
+      font-weight: 600;
+    }
+    &:hover {
+      span {
+        color: var(--secondary-color);
+      }
+    }
+  }
+  .content {
+    align-content: space-evenly;
+    background-color: var(--greyapple);
+    display: grid;
+    grid-auto-flow: column;
+    place-items: center;
+    position: relative;
+    z-index: 10;
+  }
+  .dropdown {
+    background-color: var(--darkmatter);
+    display: none;
+    margin-top: 60px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    a {
+      color: white;
+      padding: 20px;
+      &:hover {
+        color: var(--greyapple);
+        background-color: var(--greenapple);
+      }
+    }
+    &.show {
+      display: grid;
+    }
+  }
+  .links {
+    display: grid;
+    grid-auto-columns: minmax(min-content, 50px);
+    grid-auto-flow: column;
+    grid-gap: 15px;
+    place-items: center;
+    &.nav-items {
+      justify-self: right;
+      padding-right: 15px;
+    }
+    .t {
+      padding-left: rem-calc(7);
+    }
+  }
+  .menu {
+    -webkit-user-select: none;
+    display: none;
+    justify-self: right;
+    margin-right: 15px;
+    position: relative;
+    user-select: none;
+    input {
+      -webkit-touch-callout: none;
+      cursor: pointer;
+      display: block;
+      height: 24px;
+      left: -5px;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      width: 24px;
+      z-index: 2;
+    }
+    label {
+      color: var(--greenapple);
+      font-size: 32px;
+      left: -8px;
+      position: relative;
+      top: -10px;
+    }
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  nav{
+    .content {
+      .links {
+        display: none;
+      }
+      .menu {
+        display: initial;
+      }
+    }
+  }
+}
