--- a/src/config-scss/variables.scss
+++ b/src/config-scss/variables.scss
@@ -7,4 +7,8 @@
   --primary-color: #294a88;
   --secondary-color: #eb9a28;
   --border-form: #05b59d;
+
+  --darkmatter: #34495e;
+  --greenapple: #294a88;
+  --greyapple: #05b59d;
 }
