--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -71,7 +71,7 @@ nav {
       padding-right: 15px;
     }
     .t {
-      padding-left: rem-calc(7);
+      padding-left: .2rem;
     }
   }
   .menu {
