--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,11 +5,11 @@
 }
 .container-main {
   display: flex;
-  //flex-wrap: wrap;
 
-  app-details-post {
-    width: 80%;
-    text-align: center;
+  app-sidebar {
+    @media(max-width: 768px) {
+      display: none;
+    }
   }
 }
 
