--- a/src/app/components/card-post/card-post.component.scss
+++ b/src/app/components/card-post/card-post.component.scss
@@ -12,6 +12,10 @@
     // font-weight: 600;
     // color: white;
     // border-radius: 4px;
+
+    @media(max-width: 375px) {
+      padding: 0.5rem;
+    }
   }
 
   .page-link {
@@ -26,7 +30,6 @@
 
 
 .container {
-  // width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -84,6 +87,10 @@
 
     &:hover {
       transform: scale3d(1.1, 1.1, 1);
+    }
+
+    @media(max-width: 363px) {
+      width: 290px;
     }
   }
 }
