--- a/src/app/components/card-post/card-post.component.html
+++ b/src/app/components/card-post/card-post.component.html
@@ -1,4 +1,9 @@
+
 <section class="container" >
+  <div *ngIf="loading"  class="container-spinner">
+    <div  class="spinner"></div>
+  </div>
+
   <div class="card" *ngFor="let post of posts | slice: startIndex:endIndex"  >
     <div class="image-container">
       <img src="https://marlin.com.br/images/portfolio/1/produto-marlin.jpg"
@@ -11,12 +16,13 @@
       <a routerLink="/detail/{{ post.id }}" >Leia mais</a>
     </div>
   </div>
+
 </section>
 <ul class="pagination" *ngIf="posts">
-  <li
+    <li
     class="page-item"
     *ngFor="let i of getArrayLenght(posts.length); let n = index"
-  >
+    >
     <a class="page-link" (click)="getIndex(n)">{{ n + 1 }}</a>
   </li>
 </ul>
