--- a/src/app/components/card-post/card-post.component.scss
+++ b/src/app/components/card-post/card-post.component.scss
@@ -34,6 +34,26 @@
   justify-content: center;
   flex-wrap: wrap;
 
+  .container-spinner {
+
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .spinner {
+      border: 8px solid rgba(0, 0, 0, .1);
+      border-left-color: var(--primary-color);
+      height: 60px;
+      width: 60px;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+
+      @keyframes spin {
+        to{ transform: rotate(360deg); }
+      }
+    }
+  }
 
   .card {
     width: 300px;
