--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,20 +13,24 @@ main {
   margin: 0 auto;
   box-sizing: border-box;
 
-}
 
-app-details-post {
-  width: 75%;
+  app-details-post {
+    width: 75%;
 
-  @media(max-width: 768px) {
-    width: 100%;
+    @media(max-width: 768px) {
+      width: 100%;
+    }
   }
-}
 
-app-add-post {
-  width: 75%;
+  app-add-post {
+    width: 75%;
 
-  @media(max-width: 768px) {
+    @media(max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  app-card-post {
     width: 100%;
   }
 }
